fixed the overflow issue

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -49,7 +49,7 @@ nav {
 
 /* Body */
 body{
-    overflow: none;
+    overflow-x: auto;
 }
 .header{
     padding: 20px;
